fixed overlapping project card on nav bar. Had to adjust font size of the card's description content

--- a/src/style/about.css
+++ b/src/style/about.css
@@ -22,6 +22,9 @@
 }
 
 
+.skill-box > h3{
+  padding-bottom: 5%;
+}
 
 #my_story {
   margin-top: 5%;
